--- a/Index.Rmd
+++ b/Index.Rmd
@@ -7,7 +7,7 @@ output:
     df_print: default
 runtime: shiny_prerendered
 description: >
-  Learn about the basic syntax of R.
+  Learn how to use RStudio and R Markdown files.
 ---
 
 
